# NovelForge

./: .gitignore  AGENTS.md  README.md  cybervisor.yaml  pyproject.toml
docs/plan/: 20260614-init-scaffolding.md  20260614-stage-completion-protocol.md  novelforge-design.md  pipeline-customization.md  stage-contract.md
output/: r.json
samples/minimal-novel/: CLAUDE.md  novel-project.yaml
samples/minimal-novel/.novelforge/: state.yaml
samples/minimal-novel/chapters-outline/: outline.md
samples/minimal-novel/characters/: alice.md
samples/minimal-novel/outline/: premise.md  world.md
samples/minimal-novel/output/chapters/: 001.md
samples/minimal-novel/prompts/: generate-outline.md  review-chapter.md  review-outline.md  write-chapter.md
src/novelforge/: __init__.py  artifact_registry.py  cli.py  config.py  errors.py  orchestrator.py  state.py  templates.py  verify.py
src/novelforge/claude/: __init__.py  adapter.py  context.py  output_parser.py  tokens.py
src/novelforge/review/: __init__.py  gate.py  schema.py
src/novelforge/stages/: __init__.py  _helpers.py  base.py  design_characters.py  final_polish.py  full_consistency_check.py  generate_outline.py  generic.py  review_chapter.py  review_characters.py  review_outline.py  review_simulation.py  simulate_plot.py  write_chapter.py
src/novelforge/utils/: __init__.py  fs.py  log.py
tests/: test_adapter.py  test_artifact_registry.py  test_claude_adapter.py  test_cli.py  test_cli_init.py  test_cli_v4.py  test_config.py  test_context.py  test_e2e_contract.py  test_e2e_sample.py  test_e2e_v4.py  test_error_recovery.py  test_errors.py  test_generic_stage.py  test_orchestrator.py  test_orchestrator_v4.py  test_output_parser.py  test_prompt_renderer.py  test_quality_gates.py  test_review.py  test_stage_config.py  test_state.py  test_templates.py  test_utils.py  test_verify.py
(+5 files in other folders)
