[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novelforge"
version = "0.1.0"
description = "Declarative, pipeline-driven AI long-form novel engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "NovelForge Authors" },
]
keywords = ["novel", "writing", "ai", "pipeline", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "PyYAML>=6.0",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
nf = "novelforge.cli:main"

[project.urls]
"Source" = "https://example.com/novelforge"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["novelforge*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jsonschema.*",
]

[tool.coverage.run]
branch = true
source = ["src/novelforge"]
omit = [
    "src/novelforge/__main__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
